# Yuchen971-Image-cut-mat-with-ai

./: .gitignore  LICENSE  MAC_BUILD_GUIDE.md  README.md  build_mac.sh  build_mac_app.py  create_launcher.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
auto_cut_and_mat_image/: engine_lazy.py  main.py  splash_screen.py
auto_cut_and_mat_image/u2net/: model.py  utils.py
